[package]
edition = '2018'
name = "futures-ticker"
version = "0.0.1-dev"
authors = ["Andreas Fuchs <asf@boinkor.net>"]
license = "MIT"
repository = "https://github.com/antifuchs/futures-ticker"
readme = "README.md"
description = "An asynchronous recurring time event"
documentation = "https://docs.rs/futures-ticker"

[badges]
travis-ci = { repository = "antifuchs/futures-ticker", branch = "master" }
maintenance = { status = "passively-maintained" }

[package.metadata.template_ci.clippy]
allow_failure = false
version = "stable"

[dependencies]
futures-timer = "3.0.2"
futures = "0.3.5"

[dev-dependencies]
proptest = "0.10.0"
smol = "0.1.18"